# URLGuardian

./: .gitignore  pyproject.toml
tests/: test_extract_url.py  test_url.py
urlguardian/: helpers.py  index.html  server.py
urlguardian/static/: style.css
